k8s-manifests/celery-deployment.yaml
# celery-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: celery-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: celery
  template:
    metadata:
      labels:
        app: celery
    spec:
      containers:
      - name: celery
        image: web-app-image:0.0.1  # Assuming Celery workers are part of your backend image
        command: ["celery", "-A", "core", "worker", "--loglevel=info"]
