k8s-manifests/postgres-deployment.yaml
# postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgresdb
        image: postgres:13
        imagePullPolicy: "IfNotPresent"
        ports:
          - containerPort: 5432
        volumeMounts:
          - mountPath: /var/lib/postgresql/data
            name: postgresdb
          - name: backend-secret
            mountPath: "/etc/backend-secret"
            readOnly: true
      volumes:
        - name: postgresdb
          persistentVolumeClaim:
            claimName: postgres-pvc
        - name: backend-secret
          secret:
            secretName: backend-secret
---
# postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
spec:
  selector:
    app: postgres
  type: NodePort
  ports:
  - port: 5432
    targetPort: 5432

# k8s-manifests/postgres-deployment.yaml
